# Readmission-ML-Project

./: Makefile  README.md  pull_request_template.md  pyproject.toml  readmission_prediction_app.py  requirements.txt
data/interim/: x_test.csv  y_test.csv  y_train.csv
data/processed/: y_train_model_input.csv
models/: NB_balance_recall.joblib  NB_final_model.joblib  NB_pipeline_imbalance_recall.joblib
notebooks/: 1-readmited_preprocess.ipynb  4-readmited_Models_balanced.ipynb  5-readmited_Models_imbalance_NoMeds.ipynb
reports/: Diabetes_data_profiling_univariate_report_1.html  Diabetes_data_profiling_univariate_report_2.html  test_score.txt  train_score.txt
src/data/: make_dataset.py  preprocessing.py
src/features/: build_features.py
src/models/: evaluation.py  train_model.py
test/: test_features.py
